--- a/Mini-Netflix/src/app/movie-details/movie-details.component.html
+++ b/Mini-Netflix/src/app/movie-details/movie-details.component.html
@@ -1,1 +1,87 @@
-<p>movie-details works!</p>
+
+<div class="container card" style="padding: 20px;  margin-top: 15px; width: 50%;">
+    <h3 style="text-align: center;">Movie Title</h3>
+    <hr>
+  <div class="row">
+
+    <div class="col-md-5" style="padding: 2px 20px 2px 20px;" >
+      <div class="card" style="border: 0px;">
+        <img src="/assets/images/posterStarIsborn.jpg" alt="" style="width: 100%; height: 450px;">
+      </div>
+    </div>
+
+    <div class="col-md-6" style="padding: 20px 2px 2px 2px; border: 0px;">
+      <div class="card" style="border: 0px;">
+        <div class=" form-inline">
+          <p para>Director:</p> &nbsp; &nbsp;
+          <p>{{selectedMovie.Rated}}</p>
+        </div>
+        <div class="form-inline" style="margin-bottom: 0rem;">
+          <p para>Realeased:</p> &nbsp; &nbsp;
+          <p>3rd December, 2018</p>
+        </div>
+        <div class="form-inline" style="margin-bottom: 0rem;">
+          <p para>Country:</p> &nbsp; &nbsp;
+          <p>USA</p>
+        </div>
+        <div class="form-inline" style="margin-bottom: 0rem;">
+          <p para>Language:</p> &nbsp; &nbsp;
+          <p>USA</p>
+        </div>
+        <div class="form-inline" style="margin-bottom: 0rem;">
+          <p para>Writer:</p> &nbsp; &nbsp;
+          <p>USA</p>
+        </div>
+        <div class="form-inline" style="margin-bottom: 0rem;">
+          <p para>Genre:</p> &nbsp; &nbsp;
+          <p>USA</p>
+        </div>
+        <div class="form-inline" style="margin-bottom: 0rem;">
+          <p para>Runtime:</p> &nbsp; &nbsp;
+          <p>USA</p>
+        </div>
+        <div class="form-inline" style="margin-bottom: 0rem;">
+          <p para>Ratings:</p> &nbsp; &nbsp;
+          <p>USA</p>
+        </div>
+        <div class="form-inline" style="margin-bottom: 0rem;">
+          <p para>Awards:</p> &nbsp; &nbsp;
+          <p>USA</p>
+        </div>
+        <div class="form-inline" style="margin-bottom: 0rem;">
+            <p para>Cast:</p> &nbsp; &nbsp;
+            <p>USA</p>
+          </div>
+      </div>
+    </div>
+
+    <div class="col-md-12" >
+      <div class="card" style="border: 0px; padding: 20px 3px 3px 14px;">
+        <div class="form-inline">
+          <span style="font-size: 35px; text-align: center;" class="fa fa-star-o"><p style="font-size: 20px;">Favourite</p> </span>&nbsp; &nbsp; &nbsp; &nbsp;
+          <span style="font-size: 35px; text-align: center;" class="fa fa-thumbs-o-up"><p style="font-size: 20px;">Rate</p> </span>&nbsp; &nbsp; &nbsp; &nbsp;
+          <span style="font-size: 35px; text-align: center;" class="fa fa-download"><p style="font-size: 20px;">Download</p></span>&nbsp; &nbsp; &nbsp; &nbsp;
+          <span style="font-size: 35px; text-align: center; font-weight: lighter;" class="fa fa-plus"><p style="font-size: 20px;">My List</p></span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12" >
+        <div class="card" style="border: 0px; padding: 10px 3px 3px 11px;">
+          <div class="form-inline">
+             There are many variations of passages of Lorem Ipsum available, but the majority have
+               suffered alteration in some form, by injected humour, or randomised words
+                which don't look even slightly believable. If you are going to use a passage of
+                Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+                All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making t
+                his the first true generator on the Internet.
+          </div>
+        </div>
+      </div>
+
+  </div>
+
+</div> <!-- ends container card  -->
+
+
+
