--- a/Mini-Netflix/src/app/homepage/homepage.component.html
+++ b/Mini-Netflix/src/app/homepage/homepage.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="padding: 1px 15px 0px 15px;">
     <input class="form-control mr-sm-2" #myTitle [(ngModel)]="title" (input)="filterTitles()" type="text" placeholder="Search" aria-label="Search">
-  <button class="btn btn-info" style="background-image: linear-gradient(-190deg,#30c8ca 0%,#00afe9 100%);">Button</button>
+  <!-- <button class="btn btn-info" style="background-image: linear-gradient(-190deg,#30c8ca 0%,#00afe9 100%);">Button</button> -->
 
   <br><br>
   <div class="row">
@@ -8,7 +8,7 @@
       <h5 style="text-align: center; color: grey;">{{allmovie?.title}}</h5>
       <div class="card">
           <!-- /assets/images/posterCmarvel.jpg -->
-        <img style="width: 100%; height: 25%; margin-bottom: 0px;" src="{{allmovie.image}}" alt="Captain Marvel">
+        <img style="width: 100%; height: 28%; margin-bottom: 0px;" src="{{allmovie.image}}" alt="Captain Marvel">
         <p style="padding-left: 5px;"> Released: {{allmovie?.Released}}</p>
       </div>
 
