--- a/Mini-Netflix/src/app/movie-details/movie-details.component.css
+++ b/Mini-Netflix/src/app/movie-details/movie-details.component.css
@@ -7,3 +7,11 @@ span:hover{
   transform: scale(1.1);
   transition: transform .8s;
 }
+
+/* .fa-star{
+  background-color: rgb(182, 11, 25);
+} */
+
+.isActive{
+  color: rgb(182, 11, 25);
+}
