--- a/Mini-Netflix/src/app/movie-details/movie-details.component.html
+++ b/Mini-Netflix/src/app/movie-details/movie-details.component.html
@@ -1,12 +1,12 @@
 
 <div class="container card" style="padding: 20px;  margin-top: 15px; width: 50%;">
-    <h3 style="text-align: center;">Movie Title</h3>
+    <h3 style="text-align: center;">{{selectedMovie?.title}}</h3>
     <hr>
   <div class="row">
 
     <div class="col-md-5" style="padding: 2px 20px 2px 20px;" >
       <div class="card" style="border: 0px;">
-        <img src="/assets/images/posterStarIsborn.jpg" alt="" style="width: 100%; height: 450px;">
+        <img src="{{selectedMovie.image}}" alt="" *ngIf="selectedMovie" style="width: 100%; height: 450px;">
       </div>
     </div>
 
@@ -14,11 +14,11 @@
       <div class="card" style="border: 0px;">
         <div class=" form-inline">
           <p para>Director:</p> &nbsp; &nbsp;
-          <p>{{selectedMovie.Rated}}</p>
+          <p>{{selectedMovie?.Director}}</p>
         </div>
         <div class="form-inline" style="margin-bottom: 0rem;">
-          <p para>Realeased:</p> &nbsp; &nbsp;
-          <p>3rd December, 2018</p>
+          <p para>Released:</p> &nbsp; &nbsp;
+          <p>{{selectedMovie?.Released}}</p>
         </div>
         <div class="form-inline" style="margin-bottom: 0rem;">
           <p para>Country:</p> &nbsp; &nbsp;
@@ -26,31 +26,31 @@
         </div>
         <div class="form-inline" style="margin-bottom: 0rem;">
           <p para>Language:</p> &nbsp; &nbsp;
-          <p>USA</p>
+          <p>{{selectedMovie?.Language}}</p>
         </div>
         <div class="form-inline" style="margin-bottom: 0rem;">
           <p para>Writer:</p> &nbsp; &nbsp;
-          <p>USA</p>
+          <p>{{selectedMovie?.Writer}}</p>
         </div>
         <div class="form-inline" style="margin-bottom: 0rem;">
           <p para>Genre:</p> &nbsp; &nbsp;
-          <p>USA</p>
+          <p>{{selectedMovie?.Genre}}</p>
         </div>
         <div class="form-inline" style="margin-bottom: 0rem;">
           <p para>Runtime:</p> &nbsp; &nbsp;
-          <p>USA</p>
+          <p>{{selectedMovie?.Runtime}}</p>
         </div>
         <div class="form-inline" style="margin-bottom: 0rem;">
           <p para>Ratings:</p> &nbsp; &nbsp;
-          <p>USA</p>
+          <p>{{selectedMovie?.Rated}}</p>
         </div>
         <div class="form-inline" style="margin-bottom: 0rem;">
           <p para>Awards:</p> &nbsp; &nbsp;
-          <p>USA</p>
+          <p>{{selectedMovie?.Awards}}</p>
         </div>
         <div class="form-inline" style="margin-bottom: 0rem;">
             <p para>Cast:</p> &nbsp; &nbsp;
-            <p>USA</p>
+            <p>{{selectedMovie?.Actors}}</p>
           </div>
       </div>
     </div>
@@ -58,7 +58,9 @@
     <div class="col-md-12" >
       <div class="card" style="border: 0px; padding: 20px 3px 3px 14px;">
         <div class="form-inline">
-          <span style="font-size: 35px; text-align: center;" class="fa fa-star-o"><p style="font-size: 20px;">Favourite</p> </span>&nbsp; &nbsp; &nbsp; &nbsp;
+          <span style="font-size: 35px; text-align: center;" class="fa fas fa-star-o"
+          [class.fa-star]="isActive" [class.fa-star-o]="!isActive" (click)="onclick()"
+          ><p style="font-size: 20px;">Favourite</p> </span>&nbsp; &nbsp; &nbsp; &nbsp;
           <span style="font-size: 35px; text-align: center;" class="fa fa-thumbs-o-up"><p style="font-size: 20px;">Rate</p> </span>&nbsp; &nbsp; &nbsp; &nbsp;
           <span style="font-size: 35px; text-align: center;" class="fa fa-download"><p style="font-size: 20px;">Download</p></span>&nbsp; &nbsp; &nbsp; &nbsp;
           <span style="font-size: 35px; text-align: center; font-weight: lighter;" class="fa fa-plus"><p style="font-size: 20px;">My List</p></span>
