--- a/Mini-Netflix/src/app/navbar/navbar.component.html
+++ b/Mini-Netflix/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar  sticky-top navbar-dark bg-dark" style="">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" routerLink="/movieshomepage" href="#">
           <h4 netflix >MINI-NETFLIX</h4>
         </a>
       </li>
